--- a/index.html
+++ b/index.html
@@ -4,38 +4,56 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./styles/bootstrap.min.css"> 
-    <script src="./js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href="./styles/bootstrap.min.css"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <script src="./js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>vivirplenx</title>
   </head>
   <!--INICIO HEADER-->
   <body>
-    <header>
-      <nav>
+    <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
+      <nav class="container-fluid bg-toggler">
         <div>
-          <a href="index.html"
-            ><img src="./images/logo_circularsinfondo-17vivirplenx.png"
+          <a class="navbar-brand" href="index.html"
+            ><img src="../images/logo_circularsinfondo-17vivirplenx.png"
           /></a>
         </div>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="./pages/quiensoy.html">¿Quien soy?</a></li>
-          <li><a href="./pages/queeselcoaching.html">¿Que es el Coaching?</a></li>
-          <li><a href="./pages/contacto.html">Contacto</a></li>
-          <div class="number">
-          <li><a href="https://wa.me/1164805607">Agendar</a></li>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mr-10px mb-2 mb-lg-0">
+            <li class="nav-item"><a href="index.html">Home</a></li>
+            <li class="nav-item"><a href="./pages/quiensoy.html">¿Quien soy?</a></li>
+            <li class="nav-item">
+              <a href="./pages/queeselcoaching.html">¿Que es el Coaching?</a>
+            </li>
+            <li class="nav-item"><a href="./pages/contacto.html">Contacto</a></li>
+            <div class="number">
+              <li class="nav-item">
+                <a href="https://wa.me/1164805607">Agendar</a>
+              </li>
+            </div>
+          </ul>
         </div>
-        </ul>
       </nav>
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
     <div class="container">
-      <div >
-        <img
+      <div>
+        <img class="foto-principal"
           src="./images/female-tourists-spread-their-arms-and-held-their-wings.jpg"
         />
       </div>
@@ -50,12 +68,18 @@
     </div>
     <!--FIN BODY-->
     <!--INICIO FOOTER-->
-    <footer> 
-        REDES SOCIALES
+    <footer>
       <section class="footer">
-        <a href="https://www.instagram.com/vivirplenx/";
-          ><img src="./images/Instagram_logo.png"
-        /></a>
+        <ul>
+          Redes Sociales
+          <hr style="width: 100px; margin-left: 0px" />
+          <div class="container-foot">
+            <a href="https://www.instagram.com/vivirplenx/"
+              ><img src="./images/instagram.svg" />
+            </a>
+            <a href=""><img src="./images/linkedin-in.svg" /></a>
+          </div>
+        </ul>
       </section>
     </footer>
     <!--FIN FOOTER-->
