--- a/pages/queeselcoaching.html
+++ b/pages/queeselcoaching.html
@@ -4,31 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/bootstrap.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="../styles/style.css" />
+    <script src="./js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <title>vivirplenx/ Que es el coaching?</title>
   </head>
   <!--INICIO HEADER-->
   <body>
-    <header>
-      <nav>
+    <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
+      <nav class="container-fluid bg-toggler">
         <div>
-          <a href="../index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img src="../images/logo_circularsinfondo-17vivirplenx.png"
           /></a>
         </div>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="quiensoy.html">¿Quien soy?</a></li>
-          <li><a href="queeselcoaching.html">¿Que es el Coaching?</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <div class="number">
-            <li><a href="https://wa.me/1164805607">Agendar</a></li>
-          </div>
-        </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mr-10px mb-2 mb-lg-0">
+            <li class="nav-item"><a href="../index.html">Home</a></li>
+            <li class="nav-item"><a href="quiensoy.html">¿Quien soy?</a></li>
+            <li class="nav-item">
+              <a href="queeselcoaching.html">¿Que es el Coaching?</a>
+            </li>
+            <li class="nav-item"><a href="contacto.html">Contacto</a></li>
+            <div class="number">
+              <li class="nav-item">
+                <a href="https://wa.me/1164805607">Agendar</a>
+              </li>
+            </div>
+          </ul>
+        </div>
       </nav>
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
+
     <section class="text-2">
       <h1>¿Qué es el coaching Ontológico?</h1>
       <p>
@@ -51,74 +82,98 @@
     <section class="targets-1">
       <article>
         <!--GRID ITEM-->
-        <h2>Coaching Personal</h2>
-        <ul>
-          <li>Aprender a detectar y gestionar las emociones</li>
-          <li>Mejorar la comunicación</li>
-          <li>Afrontar mejor los cambios en tu vida</li>
-          <li>Trabajar inseguridades y miedos</li>
-          <li>Vencer estancamiento y desmotivación</li>
-          <li>Conseguir mayor crecimiento personal</li>
-          <li>Superar conflictos de pareja</li>
-          <li>Manejar la asertividad</li>
-          <li>Ganar energía y seguridad</li>
-          <li>Elaborar un plan de acción y llevarlo a cabo</li>
-          <li>Facilitar la toma de decisiones</li>
-          <li>Gestionar mejor el tiempo</li>
-          <li>Conciliar vida laboral-familiar-social</li>
-          <li>Aumentar rendimiento y productividad</li>
-          <li>Adquirir iniciativa para actuar</li>
-          <li>Abandonar el auto-sabotaje</li>
-        </ul>
+        <div class="text-list">
+          <h2>Coaching Personal</h2>
+          <ul>
+            <li>Aprender a detectar y gestionar las emociones</li>
+            <li>Mejorar la comunicación</li>
+            <li>Afrontar mejor los cambios en tu vida</li>
+            <li>Trabajar inseguridades y miedos</li>
+            <li>Vencer estancamiento y desmotivación</li>
+            <li>Conseguir mayor crecimiento personal</li>
+            <li>Superar conflictos de pareja</li>
+            <li>Manejar la asertividad</li>
+            <li>Ganar energía y seguridad</li>
+            <li>Elaborar un plan de acción y llevarlo a cabo</li>
+            <li>Facilitar la toma de decisiones</li>
+            <li>Gestionar mejor el tiempo</li>
+            <li>Conciliar vida laboral-familiar-social</li>
+            <li>Aumentar rendimiento y productividad</li>
+            <li>Adquirir iniciativa para actuar</li>
+            <li>Abandonar el auto-sabotaje</li>
+          </ul>
+        </div>
+        <button class="button-info">
+          <a href="#">+ INFO</a>
+        </button>
       </article>
 
       <article>
         <!--GRID ITEM-->
-        <h2>Coaching Familiar</h2>
-        <ul>
-          <li>Alcanzar una mayor y mejor comunicación familiar</li>
-          <li>
-            Respetar los pensamientos y sentimientos de cada uno de los miembros
-          </li>
-          <li>Trabajar acuerdos, planes y soluciones</li>
-          <li>Potenciar las habilidades de cada uno</li>
-          <li>Distinguir y clarificar las necesidades de todos</li>
-          <li>Establecer un plan de tareas entre todos</li>
-          <li>Desarrollar pautas de actuación y cooperación</li>
-          <li>Mejorar el rendimiento escolar</li>
-          <li>Fomentar la empatía</li>
-          <li>Desarrollar constancia</li>
-          <li>Enriquecer la convivencia y reforzar los lazos familiares</li>
-        </ul>
+        <div class="text-list">
+          <h2>Coaching Familiar</h2>
+          <ul>
+            <li>Alcanzar una mayor y mejor comunicación familiar</li>
+            <li>
+              Respetar los pensamientos y sentimientos de cada uno de los
+              miembros
+            </li>
+            <li>Trabajar acuerdos, planes y soluciones</li>
+            <li>Potenciar las habilidades de cada uno</li>
+            <li>Distinguir y clarificar las necesidades de todos</li>
+            <li>Establecer un plan de tareas entre todos</li>
+            <li>Desarrollar pautas de actuación y cooperación</li>
+            <li>Mejorar el rendimiento escolar</li>
+            <li>Fomentar la empatía</li>
+            <li>Desarrollar constancia</li>
+            <li>Enriquecer la convivencia y reforzar los lazos familiares</li>
+          </ul>
+        </div>
+        <button class="button-info">
+          <a href="#">+ INFO</a>
+        </button>
       </article>
-
       <article>
         <!--GRID ITEM-->
-        <h2>Coaching Social</h2>
-        <ul>
-          <li>Mejorar tus relaciones con los demás</li>
-          <li>Alcanzar autonomía en tus decisiones</li>
-          <li>
-            Aprender a transmitir tus opiniones y necesidades con asertividad
-          </li>
-          <li>Escuchar y ser escuchado</li>
-          <li>Cooperar y decidir en equipo</li>
-          <li>Respetar y obtener respeto de los demás</li>
-          <li>Adaptabilidad a tu contexto social</li>
-          <li>Reconocer tus emociones y afectos</li>
-          <li>Trabajar con otros hacia metas compartidas</li>
-          <li>Tomar distancia para crear una visión compartida</li>
-          <li>Resolución de desacuerdos. (Llegar a soluciones consensuadas)</li>
-        </ul>
+        <div class="text-list">
+          <h2>Coaching Social</h2>
+          <ul>
+            <li>Mejorar tus relaciones con los demás</li>
+            <li>Alcanzar autonomía en tus decisiones</li>
+            <li>
+              Aprender a transmitir tus opiniones y necesidades con asertividad
+            </li>
+            <li>Escuchar y ser escuchado</li>
+            <li>Cooperar y decidir en equipo</li>
+            <li>Respetar y obtener respeto de los demás</li>
+            <li>Adaptabilidad a tu contexto social</li>
+            <li>Reconocer tus emociones y afectos</li>
+            <li>Trabajar con otros hacia metas compartidas</li>
+            <li>Tomar distancia para crear una visión compartida</li>
+            <li>
+              Resolución de desacuerdos. (Llegar a soluciones consensuadas)
+            </li>
+          </ul>
+        </div>
+        <button class="button-info">
+          <a href="#">+ INFO</a>
+        </button>
       </article>
     </section>
+
     <!--INICIO FOOTER-->
     <footer>
-      REDES SOCIALES
       <section class="footer">
-        <a href="https://www.instagram.com/vivirplenx/" ;
-          ><img src="../images/Instagram_logo.png"
-        /></a>
+        <ul>
+          Redes Sociales
+          <hr style="width: 100px; margin-left: 0px" />
+          <div class="container-foot">
+            <a href="https://www.instagram.com/vivirplenx/"
+              ><img src="../images/instagram.svg" />
+            </a>
+            <a href=""><img src="../images/linkedin-in.svg" /></a>
+          </div>
+        </ul>
       </section>
     </footer>
     <!--FIN FOOTER-->
