--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -12,69 +12,92 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../styles/style.css" />
+    <script src="./js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <title>vivirplenx/ Quien soy?</title>
   </head>
   <!--INICIO HEADER-->
   <body>
-    <header>
-      <nav>
+    <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
+      <nav class="container-fluid bg-toggler">
         <div>
-          <a href="../index.html"
+          <a class="navbar-brand" href="../index.html"
             ><img src="../images/logo_circularsinfondo-17vivirplenx.png"
           /></a>
         </div>
-        <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="quiensoy.html">¿Quien soy?</a></li>
-          <li><a href="queeselcoaching.html">¿Que es el Coaching?</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <div class="number">
-            <li><a href="https://wa.me/1164805607">Agendar</a></li>
-          </div>
-        </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mr-10px mb-2 mb-lg-0">
+            <li class="nav-item"><a href="../index.html">Home</a></li>
+            <li class="nav-item"><a href="quiensoy.html">¿Quien soy?</a></li>
+            <li class="nav-item">
+              <a href="queeselcoaching.html">¿Que es el Coaching?</a>
+            </li>
+            <li class="nav-item"><a href="contacto.html">Contacto</a></li>
+            <div class="number">
+              <li class="nav-item">
+                <a href="https://wa.me/1164805607">Agendar</a>
+              </li>
+            </div>
+          </ul>
+        </div>
       </nav>
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
-    <div class="container-1">
-      <div class="row">
-        <div class="col-sm-9">
-          <h2>
-            ¿Quien soy?
-            <p>
-              Hola! Gracias por visitar mi pagina web! Mi nombre es Lorena De
-              Meo, soy Licenciada en Sociología egresada de la UBA.
-              Posteriormente me formé como Coach Ontológica en Axon Training Mi
-              trayectoria como investigadora social y de mercados, dentro del
-              mundo de la Sociología, me ayuda a observar, analizar y entender
-              rasgos sociales que condicionan la vida de las personas, como los
-              valores y las creencias, así como su comportamiento en los
-              procesos de cambio, en el ámbito laboral, personal, familiar,
-              educativo, de consumo, ocio, etc. Me gustaría acompañarte en un
-              proceso de desarrollo, para que puedas alcanzar tu máximo
-              potencial.
-            </p>
-          </h2>
-        </div>
-        <div class="col-sm-3">
-          <img src="../images/WhatsApp Image 2021-07-05 at 17.42.40 (1).jpeg" />
-        </div>
+    <div class="container-1 row">
+      <div class="col-lg-6">
+        <img
+          class="foto"
+          src="../images/WhatsApp Image 2021-07-05 at 17.42.40 (1).jpeg"
+        />
+      </div>
+      <div class="container-text col-lg-6 p-2">
+        <h2>¿Quien soy?</h2>
+        <p>
+          Hola! Gracias por visitar mi pagina web! Mi nombre es Lorena De Meo,
+          soy Licenciada en Sociología egresada de la UBA. Posteriormente me
+          formé como Coach Ontológica en Axon Training Mi trayectoria como
+          investigadora social y de mercados, dentro del mundo de la Sociología,
+          me ayuda a observar, analizar y entender rasgos sociales que
+          condicionan la vida de las personas, como los valores y las creencias,
+          así como su comportamiento en los procesos de cambio, en el ámbito
+          laboral, personal, familiar, educativo, de consumo, ocio, etc. Me
+          gustaría acompañarte en un proceso de desarrollo, para que puedas
+          alcanzar tu máximo potencial.
+        </p>
+        <button class="button-2">
+          <a href="#">Ver certificados</a>
+        </button>
       </div>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
-      <path
-        fill="#273036"
-        fill-opacity="1"
-        d="M0,160L34.3,160C68.6,160,137,160,206,165.3C274.3,171,343,181,411,165.3C480,149,549,107,617,112C685.7,117,754,171,823,165.3C891.4,160,960,96,1029,96C1097.1,96,1166,160,1234,186.7C1302.9,213,1371,203,1406,197.3L1440,192L1440,0L1405.7,0C1371.4,0,1303,0,1234,0C1165.7,0,1097,0,1029,0C960,0,891,0,823,0C754.3,0,686,0,617,0C548.6,0,480,0,411,0C342.9,0,274,0,206,0C137.1,0,69,0,34,0L0,0Z"
-      ></path>
-    </svg>
     <!--INICIO FOOTER-->
     <footer>
-      REDES SOCIALES
       <section class="footer">
-        <a href="https://www.instagram.com/vivirplenx/" ;
-          ><img src="../images/Instagram_logo.png"
-        /></a>
+        <ul>
+          Redes Sociales
+          <hr style="width: 100px; margin-left: 0px" />
+          <div class="container-foot">
+            <a href="https://www.instagram.com/vivirplenx/"
+              ><img src="../images/instagram.svg" />
+            </a>
+            <a href=""><img src="../images/linkedin-in.svg" /></a>
+          </div>
+        </ul>
       </section>
     </footer>
     <!--FIN FOOTER-->
