--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,10 +18,15 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <title>vivirplenx/ Contacto</title>
+    <title>Vivirplenx - Contacto</title>
+    <meta
+      name="VivirPlenx - Coaching \ CONTACTO - Contactame y resolve tu consulta"
+      content="Podes solicitar turnos, agendar dia y hora para que empecemos"
+    />
+    <meta name="keywords" content="TURNOS, AGENDAR, FECHA, DURACION" />
   </head>
   <!--INICIO HEADER-->
-  <body>
+  <body class="overflow-x-hidden">
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
       <nav class="container-fluid bg-toggler">
         <div>
@@ -59,20 +64,25 @@
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
-    <section class="form-img row">
+    <section class="form-img row no-gutters">
       <div class="image-pluma col-lg-6">
-        <img src="../images/pluma3.png" />
+        <img src="../images/pluma1.png" />
       </div>
-      <div class="formulario col-lg-6">
-        <form>
-          <p class="text-form">Nombre:</p>
-          <input type="text" />
-          <p class="text-form">Correo electronico:</p>
-          <input type="text" />
-          <p class="text-form">Numero de telefono:</p>
-          <input type="text" />
-          <button class="send"><a href="#">Enviar:</a></button>
-        </form>
+      <div class="col-lg-6">
+        <h6 class="text-center">
+          Completa este formulario y resolve tus consultas!
+        </h6>
+        <div class="formulario">
+          <form>
+            <p class="text-form">Nombre:</p>
+            <input type="text" />
+            <p class="text-form">Correo electronico:</p>
+            <input type="text" />
+            <p class="text-form">Numero de telefono:</p>
+            <input type="text" />
+            <button class="send"><a href="#">Enviar:</a></button>
+          </form>
+        </div>
       </div>
     </section>
     <!--FIN BODY-->
