--- a/pages/queeselcoaching.html
+++ b/pages/queeselcoaching.html
@@ -18,10 +18,15 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <title>vivirplenx/ Que es el coaching?</title>
+    <title>Vivirplenx - Que es el coaching?</title>
+    <meta
+      name="VivirPlenx - Coaching \ Que es el coaching? - Aprende que tipos de coaching existen"
+      content="Una breve descripcion de que es el
+    coaching junto a unas cards de los tipos de coaching que podemos trabajar"
+    />
   </head>
   <!--INICIO HEADER-->
-  <body>
+  <body class="overflow-x-hidden">
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
       <nav class="container-fluid bg-toggler">
         <div>
