--- a/pages/quiensoy.html
+++ b/pages/quiensoy.html
@@ -18,10 +18,14 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <title>vivirplenx/ Quien soy?</title>
+    <title>Vivirplenx - Quien soy?</title>
+    <meta
+      name="VivirPlenx - Coaching \ QUIEN SOY? - Sobre Mi"
+      content="Un poco sobre mi, me conoceras mejor viendo mis certificados, lugares donde estudie y reseñas de mis Coachees (Clientes en definitiva)."
+    />
   </head>
   <!--INICIO HEADER-->
-  <body>
+  <body class="overflow-x-hidden">
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
       <nav class="container-fluid bg-toggler">
         <div>
@@ -81,7 +85,7 @@
           alcanzar tu máximo potencial.
         </p>
         <button class="button-2">
-          <a href="#">Ver certificados</a>
+          <a href="certificados.html">Ver certificados</a>
         </button>
       </div>
     </div>
