--- a/index.html
+++ b/index.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/bootstrap.min.css"> 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <script src="./js/bootstrap.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/bootstrap.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <script src="./js/bootstrap.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>vivirplenx</title>
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <title>Vivirplenx - INICIO</title>
+    <meta
+      name="VivirPlenx - Coaching \ INICIO"
+      content="Inicio de mi landing page VivirPlenx, aqui podras encontrar informacion util y sencilla sobre mi."
+    />
+    <meta
+      name="keywords"
+      content="COACH, COACHING, CONTACTAR, TURNOS, PERSONAL, FAMILIAR "
+    />
   </head>
   <!--INICIO HEADER-->
-  <body>
+  <body class="overflow-x-hidden">
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
       <nav class="container-fluid bg-toggler">
         <div>
@@ -35,11 +55,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mr-10px mb-2 mb-lg-0">
             <li class="nav-item"><a href="index.html">Home</a></li>
-            <li class="nav-item"><a href="./pages/quiensoy.html">¿Quien soy?</a></li>
+            <li class="nav-item">
+              <a href="./pages/quiensoy.html">¿Quien soy?</a>
+            </li>
             <li class="nav-item">
               <a href="./pages/queeselcoaching.html">¿Que es el Coaching?</a>
             </li>
-            <li class="nav-item"><a href="./pages/contacto.html">Contacto</a></li>
+            <li class="nav-item">
+              <a href="./pages/contacto.html">Contacto</a>
+            </li>
             <div class="number">
               <li class="nav-item">
                 <a href="https://wa.me/1164805607">Agendar</a>
@@ -51,19 +75,44 @@
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
+    <div
+      id="carouselExampleAutoplaying"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/rsz-image.jpg" class="d-block w-100" />
+        </div>
+        <div class="carousel-item">
+          <img src="./images/República.jpg" class="d-block w-100" />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <div class="container">
       <div>
-        <img class="foto-principal"
-          src="./images/female-tourists-spread-their-arms-and-held-their-wings.jpg"
-        />
+        <h1>Bienvenidxs a VivirPlenx</h1>
       </div>
-        <div>
-          <h1>Bienvenidxs
-      a VivirPlenx</h1>
-        </div>
-        <div class="bottom-1">
-          <a href="#">Saber mas</a>
-        </div>
+      <div class="bottom-1">
+        <a href="#">Saber mas</a>
       </div>
     </div>
     <!--FIN BODY-->
@@ -77,7 +126,9 @@
             <a href="https://www.instagram.com/vivirplenx/"
               ><img src="./images/instagram.svg" />
             </a>
-            <a href=""><img src="./images/linkedin-in.svg" /></a>
+            <a href="https://www.linkedin.com/in/lorena-de-meo-52759167/"
+              ><img src="./images/linkedin-in.svg"
+            /></a>
           </div>
         </ul>
       </section>
