--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     />
   </head>
   <!--INICIO HEADER-->
-  <body class="overflow-x-hidden">
+  <body>
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
       <nav class="container-fluid bg-toggler">
         <div>
-          <a class="navbar-brand" href="index.html"
-            ><img src="./images/logo_circularsinfondo-17vivirplenx.png"
+          <a class="navbar-brand" href="../index.html"
+            ><img src="../images/logo_circularsinfondo-17vivirplenx.png"
           /></a>
         </div>
         <button
@@ -75,46 +75,50 @@
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
-    <div
-      id="carouselExampleAutoplaying"
-      class="carousel slide"
-      data-bs-ride="carousel"
-    >
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./images/rsz-image.jpg" class="d-block w-100" />
+    <main>
+      <div
+        id="carouselExampleAutoplaying"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./images/rsz-image.jpg" class="d-block w-100" />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./images/2da-imagen-carousel (2).jpg"
+              class="d-block w-100"
+            />
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="./images/República.jpg" class="d-block w-100" />
-        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleAutoplaying"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <button
-        class="carousel-control-prev"
-        type="button"
-        data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="prev"
-      >
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button
-        class="carousel-control-next"
-        type="button"
-        data-bs-target="#carouselExampleAutoplaying"
-        data-bs-slide="next"
-      >
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-    <div class="container">
-      <div>
+      <div class="container">
         <h1>Bienvenidxs a VivirPlenx</h1>
+        <div class="bottom-1">
+          <a href="./pages/quiensoy.html">Saber mas</a>
+        </div>
       </div>
-      <div class="bottom-1">
-        <a href="#">Saber mas</a>
-      </div>
-    </div>
+    </main>
+    <section class="button-1"></section>
     <!--FIN BODY-->
     <!--INICIO FOOTER-->
     <footer>
