--- a/pages/certificados.html
+++ b/pages/certificados.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <!--INICIO HEADER-->
-<body class="overflow-x-hidden">
+<body>
     <header class="navbar navbar-expand-xl px-5 sticky-top p-0 ps-0 pe-0">
     <nav class="container-fluid bg-toggler">
         <div>
@@ -70,22 +70,22 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-        <div class="carousel-item p-5 active">
+        <div class="imgc-1 carousel-item p-5 active">
             <img src="../images/certificado axon.jpeg" class="d-block w-100" >
         </div>
-        <div class="carousel-item p-5">
+        <div class="imgc-2 carousel-item p-5">
             <img src="../images/certificado posgrado.jpeg" class="d-block w-100" >
         </div>
-        <div class="carousel-item p-5">
+        <div class="imgc-3 carousel-item p-5">
             <img src="../images/certificado uba.jpeg" class="d-block w-100" >
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="btn btn-primary carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="btn btn-dark carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="btn btn-primary carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="btn btn-dark carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
         </button>
     </div>
