--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,24 +64,24 @@
     </header>
     <!--FIN HEADER-->
     <!--INICIO BODY-->
-    <section class="form-img row no-gutters">
+    <section class="form-img row">
       <div class="image-pluma col-lg-6">
         <img src="../images/pluma1.png" />
       </div>
-      <div class="col-lg-6">
-        <h6 class="text-center">
-          Completa este formulario y resolve tus consultas!
-        </h6>
-        <div class="formulario">
-          <form>
-            <p class="text-form">Nombre:</p>
-            <input type="text" />
-            <p class="text-form">Correo electronico:</p>
-            <input type="text" />
-            <p class="text-form">Numero de telefono:</p>
-            <input type="text" />
-            <button class="send"><a href="#">Enviar:</a></button>
-          </form>
+      <div class="container-form col-lg-6">
+        <h6>Completa este formulario y resolve tus consultas!</h6>
+        <div class="posicionamiento">
+          <div class="formulario">
+            <form>
+              <p class="text-form">Nombre:</p>
+              <input type="text" />
+              <p class="text-form">Correo electronico:</p>
+              <input type="text" />
+              <p class="text-form">Numero de telefono:</p>
+              <input type="text" />
+              <button class="send"><a href="#">Enviar:</a></button>
+            </form>
+          </div>
         </div>
       </div>
     </section>
