--- a/pages/queeselcoaching.html
+++ b/pages/queeselcoaching.html
@@ -66,7 +66,7 @@
     <!--INICIO BODY-->
 
     <section class="text-2">
-      <h1>¿Qué es el coaching Ontológico?</h1>
+      <h1 class="mb-4">¿Qué es el coaching Ontológico?</h1>
       <p>
         Si querés desarrollar tu bienestar físico mental y emocional te
         proponemos un proceso reflexivo, de descubrimiento y auto motivación, a
